--- a/client/src/features/auth/styles.module.css
+++ b/client/src/features/auth/styles.module.css
@@ -26,7 +26,7 @@ button {
 }
 
 .login_card {
-  font-family: 'Euclid Circular A';
+  font-family: 'Kanit', sans-serif;
   width: 400px;
   padding: 15px 20px 20px;
   border-radius: 1.25rem;
