--- a/client/src/features/Modal/modal.module.css
+++ b/client/src/features/Modal/modal.module.css
@@ -15,6 +15,7 @@
 .modal.active {
     opacity: 1;
     pointer-events: all;
+    z-index: 1;
 }
 
 .modal__content {
@@ -22,4 +23,5 @@
     border-radius: 12px;
     background-color: white;
     width: 50vw;
+    z-index: 2;
 }
