--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,10 @@ body {
   background: linear-gradient(0deg, rgba(196,196,196,1) 0%, rgba(0,0,0,1) 61%);
 }
 
+.black_s {
+  width: 1000px;
+}
+
 .login_card {
   width: 500px;
   padding: 15px 20px 20px;
