--- a/client/src/features/SportsmenPage/SportsmenPage.module.css
+++ b/client/src/features/SportsmenPage/SportsmenPage.module.css
@@ -3,9 +3,21 @@
     border-radius: 50%;
 }
 .btn_Update{
-    border: 1px solid black;
+    border: 1px solid hsl(26, 100%, 60%);
 }
 
 .input_up{
     margin: 15px;
+}
+
+.container_lineChart {
+  display: flex;
+  max-width: 600px;
+  min-height: 300px;
+}
+
+.container_BarChart {
+  display: flex;
+  max-width: 600px;
+  min-height: 300px;
 }
