--- a/client/src/features/SportsmenPage/SportsmenPage.module.css
+++ b/client/src/features/SportsmenPage/SportsmenPage.module.css
@@ -173,15 +173,37 @@ border: 1px solid #fbefbb;
    }
 
    .grafAll_container {
-    width: 300px;
+    width: 80%;
     display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
    }
    
    .grafLine_container {
-    min-width: 400px;
-    max-width: 600px;
+    width: 550px;
   }
 
   .grafBar_container {
+    width: 550px;
+  }
 
+  .formLine_container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .formBar_container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .barinput_btn_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .lineinput_btn_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
