--- a/client/src/features/Modal/modal.module.css
+++ b/client/src/features/Modal/modal.module.css
@@ -19,9 +19,10 @@
 }
 
 .modal__content {
-    padding: 20px;
-    border-radius: 12px;
-    background-color: white;
-    width: 50vw;
-    z-index: 2;
+  display: flex;
+  padding: 30px;
+  border-radius: 12px;
+  background-color: white;
+  z-index: 2;
+  justify-content: center;
 }
