--- a/client/src/features/MainPage/style.module.css
+++ b/client/src/features/MainPage/style.module.css
@@ -1,6 +1,6 @@
 .about_container { 
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -13,14 +13,6 @@
   
   
   
-}
-
-.first {
-  display: flex;
-  flex-direction:column;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
 }
 
 .grow1 {  
@@ -70,6 +62,36 @@
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );    
 }
 
+.grow6 {
+  width: 500px;
+  height: 400px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 25%;  
+  background: url('https://images.unsplash.com/photo-1518894781321-630e638d0742?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80') no-repeat center center/cover;
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );    
+}
+
+.grow7 {
+  width: 500px;
+  height: 400px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 25%;  
+  background: url('https://images.unsplash.com/photo-1558009525-8518ac46127d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );    
+}
+
+.grow8 {
+  width: 500px;
+  height: 400px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 25%;  
+  background: url('https://images.unsplash.com/photo-1517344884509-a0c97ec11bcc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80') no-repeat center center/cover;
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );    
+}
+
 
 .about_text {
     margin-top: 30px;
@@ -77,6 +99,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 18px;
     color: #d7d7d7;
+    text-decoration: underline;
     font-weight: 500;
-    font-family: 'Kanit', sans-serif;
+    
 }
