--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -51,19 +51,16 @@
   height: 400px;
   gap: 10px;
   background: hsl(240, 3%, 30%);
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  
-  -webkit-backdrop-filter: blur( 3px );
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  -webkit-backdrop-filter: blur(3px);
   border-radius: 20px;
   border: 1px solid #d7d7d7;
-  
 }
-
 
 .info_trainer h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 22px;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   color: #d7d7d7;
 }
 
@@ -129,7 +126,7 @@
   text-transform: uppercase;
   font-weight: 700;
   font-family: monospace;
-  transition: linear .3s;
+  transition: linear 0.3s;
 }
 
 .btnx:hover {
@@ -137,7 +134,7 @@
 }
 
 .btnx::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   transform: translateY(-50%) translateX(calc(100% + 4px));
@@ -145,14 +142,15 @@
   height: 45px;
   background-color: #dc143c;
   border-radius: 50px;
-  transition: transform .25s .25s cubic-bezier(0, 0, .5, 2), width .25s cubic-bezier(0, 0, .5, 2);
+  transition: transform 0.25s 0.25s cubic-bezier(0, 0, 0.5, 2),
+    width 0.25s cubic-bezier(0, 0, 0.5, 2);
   z-index: -1;
 }
 
 .btnx:hover::before {
   width: 100%;
   transform: translateY(-50%) translateX(-18px);
-  transition: transform .25s cubic-bezier(0,0,.5,2);
+  transition: transform 0.25s cubic-bezier(0, 0, 0.5, 2);
 }
 
 .input {
@@ -169,7 +167,6 @@
 }
 
 .input:hover {
-
   border: 2px solid lightgrey;
 
   box-shadow: 0px 0px 20px -17px;
@@ -177,17 +174,15 @@
 
 .input:active {
   transform: scale(0.95);
-
 }
 
 .input:focus {
   border: 2px solid grey;
 }
 
-
 .inputs {
   -webkit-appearance: none;
- /* remove default */
+  /* remove default */
   display: block;
   margin: 10px;
   width: 24px;
@@ -195,23 +190,29 @@
   border-radius: 12px;
   cursor: pointer;
   vertical-align: middle;
-  box-shadow: hsla(0,0%,100%,.15) 0 1px 1px, inset hsla(0,0%,0%,.5) 0 0 0 1px;
-  background-color: hsla(0,0%,0%,.2);
-  background-image: -webkit-radial-gradient( hsla(200,100%,90%,1) 0%, hsla(200,100%,70%,1) 15%, hsla(200,100%,60%,.3) 28%, hsla(200,100%,30%,0) 70% );
+  box-shadow: hsla(0, 0%, 100%, 0.15) 0 1px 1px,
+    inset hsla(0, 0%, 0%, 0.5) 0 0 0 1px;
+  background-color: hsla(0, 0%, 0%, 0.2);
+  background-image: -webkit-radial-gradient(
+    hsla(200, 100%, 90%, 1) 0%,
+    hsla(200, 100%, 70%, 1) 15%,
+    hsla(200, 100%, 60%, 0.3) 28%,
+    hsla(200, 100%, 30%, 0) 70%
+  );
   background-repeat: no-repeat;
-  -webkit-transition: background-position .15s cubic-bezier(.8, 0, 1, 1),
-    -webkit-transform .25s cubic-bezier(.8, 0, 1, 1);
+  -webkit-transition: background-position 0.15s cubic-bezier(0.8, 0, 1, 1),
+    -webkit-transform 0.25s cubic-bezier(0.8, 0, 1, 1);
   outline: none;
 }
 
 .inputs:checked {
-  -webkit-transition: background-position .2s .15s cubic-bezier(0, 0, .2, 1),
-    -webkit-transform .25s cubic-bezier(0, 0, .2, 1);
+  -webkit-transition: background-position 0.2s 0.15s cubic-bezier(0, 0, 0.2, 1),
+    -webkit-transform 0.25s cubic-bezier(0, 0, 0.2, 1);
 }
 
 .inputs:active {
   -webkit-transform: scale(1.5);
-  -webkit-transition: -webkit-transform .1s cubic-bezier(0, 0, .2, 1);
+  -webkit-transition: -webkit-transform 0.1s cubic-bezier(0, 0, 0.2, 1);
 }
 
 .inputs,
@@ -256,3 +257,30 @@
   gap: 10px;
 }
 
+.radio_input {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.radio_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.divFormAddPost{
+  font-size: 25px;
+}
+
+.btn_check {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.upload_file {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
