--- a/client/src/features/Modal/modal.module.css
+++ b/client/src/features/Modal/modal.module.css
@@ -22,10 +22,12 @@
     padding: 50px;
     border-radius: 12px;
     background-color: #a8a9b3;
+    max-width: 1100px;
+
+
     /* text-decoration: underline; */
     font-family: 'Bruno Ace SC', cursive;
     font-size: 18px;
     font-weight: 600;
     z-index: 2;
-
 }
