fix: готов css на тренерской странице

--- a/client/src/features/SportsmenPage/SportsmenPage.module.css
+++ b/client/src/features/SportsmenPage/SportsmenPage.module.css
@@ -44,8 +44,8 @@ body {
 }
 
 .img_container {
-  width: 350px;
-  height: 350px;
+  min-width: 350px;
+  min-height: 350px;
   overflow: hidden;
   border-radius: 50%;
   margin-right: 30px;
