--- a/client/src/features/Footer/footer.css
+++ b/client/src/features/Footer/footer.css
@@ -23,7 +23,7 @@
 }
 
 .p-icon {
-	margin-left: 150px;
+	margin-left: 20px;
 	margin-top: 20px;
 	font-size: 2rem;
     color: #f68251;
@@ -33,7 +33,11 @@
 {
 	background: #000;
 	width: 100%;
-	height: 300px;
+	height: 150px;
+}
+.footer_card{
+	display:flex;
+	margin-left: 55px;
 }
 
 #wrap
