--- a/client/src/features/SportsmenPage/SportsmenPage.module.css
+++ b/client/src/features/SportsmenPage/SportsmenPage.module.css
@@ -44,8 +44,8 @@ body {
 }
 
 .img_container {
-  min-width: 350px;
-  min-height: 350px;
+  width: 350px;
+  height: 350px;
   overflow: hidden;
   border-radius: 50%;
   margin-right: 30px;
@@ -90,27 +90,6 @@ body {
   line-height: 1.5;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 22px;
-}
-
-.btn {
-  border-radius: 999px;
-  padding: 1em 2em;
-  background: linear-gradient(117deg, #fbefbb, #f68251);
-  border: none;
-  color: #000000;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 600;
-  cursor: pointer;
-  transition: box-shadow 0.25s ease 0s;
-  letter-spacing: 0.08rem;
-}
-
-.btn:hover,
-.btn:focus {
-  background: linear-gradient(117deg, #fbefbb, #f68251);
-  box-shadow: 0 0.1rem 0.8rem rgb(254, 100, 70);
 }
 
 .modal {
