--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -116,7 +116,7 @@
   margin-right: 10px;
   cursor: pointer;
   outline: none;
-  border: none;
+  border: 1px solid #f68251;
   background-color: #232423;
   padding: 0.3em 1.2em;
   border-radius: 30px;
@@ -409,4 +409,47 @@ margin-top: 15px;
   color: #868686;
   background-size: 100% 100%;
   box-shadow: 0 0 0 4px #232423 inset;
+}
+
+.input_tr {
+  width: 100%;
+  max-width: 300px;
+  height: 45px;
+  padding: 12px;
+  border-radius: 12px;
+  border: 1.5px solid #f68251;
+
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  box-shadow: 0px 0px 20px -18px;
+}
+
+.input_tr:hover {
+  border: 2px solid lightgrey;
+
+  box-shadow: 0px 0px 20px -17px;
+}
+
+.input_tr:active {
+  transform: scale(0.95);
+}
+
+.input_tr:focus {
+  border: 2px solid grey;
+}
+
+.cont_in {
+  width: 500px;
+  height: 150px;
+  margin-left: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: rgba( 124, 130, 138, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 5px );
+  -webkit-backdrop-filter: blur( 5px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
