--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -13,6 +13,12 @@
   margin-bottom: 400px;
 }
 
+.btn_margin {
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+}
+
 .input {
   width: 400px;
   max-width: 320px;
