--- a/client/src/features/Footer/footer.css
+++ b/client/src/features/Footer/footer.css
@@ -11,14 +11,15 @@
 .footer-text {
 	margin-left: 50px;
 	color: #7d7d7d;
-	font-family: 'Bruno Ace SC', cursive;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 22px;
 }
 
 .footer-text2 {
-	margin-left: 600px;
+	margin-left: 50px;
+	margin-top: 20px;
 	color: #7d7d7d;
-	font-family: 'Bruno Ace SC', cursive;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 22px;
 }
 
@@ -38,7 +39,7 @@
 }
 .footer_card{
 	display:flex;
-	margin-left: 55px;
+	margin-left: 35px;
 }
 
 #wrap
