--- a/client/src/features/SportsmenPage/SportsmenPage.module.css
+++ b/client/src/features/SportsmenPage/SportsmenPage.module.css
@@ -263,6 +263,7 @@ body {
   -webkit-backdrop-filter: blur(5px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 20px;
 }
 
 .grafLine_container {
@@ -400,4 +401,11 @@ box-shadow: 0 0 25px 0 #f98f62
 
 .upload_form_input {
   margin-bottom: 15px;
+}
+
+.name_chartLine {
+color: white;
+font-family: 'Roboto Condensed', sans-serif;
+font-size: 20px;
+margin-left: 20px;
 }
