--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -574,3 +574,10 @@
   background-size: 100% 100%;
   box-shadow: 0 0 0 4px #232423 inset;
 }
+
+.file_push {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px
+}
