--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -510,7 +510,7 @@
   flex-direction: column;
   margin-bottom: 70px;
   background-color: rgb(120, 120, 121);
-  padding: 40px;
+  padding: 3px 40px 40px 40px;
   border-radius: 10px;
 }
 
