--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -532,7 +532,7 @@
 
 .input_post {
   width: 500px;
-  height: 70px;
+  height: 150px;
   padding: 10px;
   border-radius: 10px;
   border: 2px solid rgb(87, 87, 87);
@@ -590,4 +590,15 @@
   
   left: 810px;
   
+}
+
+.text_delete_modal {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.fake_div {
+  height: 40px;
 }
