Fix: исправил ошибки

--- a/client/src/features/Trainer/style.module.css
+++ b/client/src/features/Trainer/style.module.css
@@ -605,8 +605,7 @@
   margin: 10px;
   border-radius: 40px;
   padding:10px
-=======
-
+}
 .file_push {
   display: flex;
   flex-direction: column;
