--- a/client/src/features/SportsmenPage/SportsmenPage.module.css
+++ b/client/src/features/SportsmenPage/SportsmenPage.module.css
@@ -76,7 +76,7 @@ body {
 .content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 20px;
   color: #fbefbb;
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
@@ -208,6 +208,21 @@ body {
   border: 2px solid grey;
 }
 
+.input_edit::-webkit-scrollbar {
+  width: 10px;
+}
+
+.input_edit::-webkit-scrollbar-track {
+  background-color: rgb(236, 236, 236);
+  border-radius: 10px;
+}
+
+.input_edit::-webkit-scrollbar-thumb {
+  background-color: #868686;
+  border-radius: 8px;
+  border: 2px solid rgb(236, 236, 236);
+}
+
 .btn_upd {
   border-radius: 999px;
   padding: 1em 2em;
@@ -334,7 +349,7 @@ body {
   animation: background 3s linear infinite;
 }
 
-.container_trainerCard{
+.container_trainerCard {
   margin-top: 20px;
   display: flex;
   border: 2px solid black;
@@ -348,45 +363,45 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.container_trainerCard:hover{
-transform: scale(1.013);
-box-shadow: 0 0 25px 0 #f98f62
+.container_trainerCard:hover {
+  transform: scale(1.013);
+  box-shadow: 0 0 25px 0 #f98f62;
 }
-.container_trainerCard:active{
+.container_trainerCard:active {
   transform: scale(0.98);
 }
 
-.container_sub_trainer{
+.container_sub_trainer {
   display: flex;
-    width: 900px;
-    gap: 20px;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: row;
+  width: 900px;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
-.img_photo_trainer{
+.img_photo_trainer {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.img_container_sub{
+.img_container_sub {
   width: 150px;
   height: 150px;
   overflow: hidden;
   display: flex;
-  align-items:center;
+  align-items: center;
   border-radius: 50%;
   margin-bottom: 10px;
   border: 3px solid #fbefbb;
 }
-.name_trainer_sub{
+.name_trainer_sub {
   padding: 5px 15px 5px 15px;
-  border: 1px solid #f68251 ;
+  border: 1px solid #f68251;
   /* background-color:#f5c350; */
   border-radius: 30px;
-  color:white
+  color: white;
 }
-.title_sub{
+.title_sub {
   color: white;
   font-size: 30px;
   margin-top: 20px;
@@ -404,8 +419,8 @@ box-shadow: 0 0 25px 0 #f98f62
 }
 
 .name_chartLine {
-color: white;
-font-family: 'Roboto Condensed', sans-serif;
-font-size: 20px;
-margin-left: 20px;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 20px;
+  margin-left: 20px;
 }
