--- a/client/src/features/MainPage/style.module.css
+++ b/client/src/features/MainPage/style.module.css
@@ -28,7 +28,9 @@
   -webkit-backdrop-filter: blur( 3px );
   border-radius: 10px;
   gap: 1rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(255, 255, 255, 0.115);
+  padding: 15px;
+  max-width: 800px;
 }
 
 .grow3 {
